syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.keepreal.madagascar.coua";

import "common.proto";

enum IslandEventType {
    ISLAND_EVENT_NONE = 0;
    ISLAND_EVENT_CREATE = 1;
}

message CreateIslandEvent {
    string hostId = 1;
}

message IslandEvent {
    IslandEventType type = 1;
    uint64 timestamp = 2;
    string eventId = 3;
    oneof event {
        CreateIslandEvent createIslandEvent = 4;
    }
}